--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="text-center">
             <span class="green-text">CA:</span>
             <span class="blue-text">8RQ4pCPBQc3QBs5sh7b1FCuKPEwAJ5oRBcJvShbEpump</span>
-            <a href="https://pump.fun/board" target="_blank" class="icon-link">
+            <a href="https://pump.fun/coin/8RQ4pCPBQc3QBs5sh7b1FCuKPEwAJ5oRBcJvShbEpump" target="_blank" class="icon-link">
                 <img src="12.png" alt="Pump Fun">
             </a>
         </div>
