--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     <div class="gradient-text-container">
         <div class="text-center">
             <span class="green-text">CA:</span>
-            <span class="blue-text">8RQ4pCPBQc3QBs5sh7b1FCuKPEwAJ5oRBcJvShbEpump</span>
-            <a href="https://pump.fun/coin/8RQ4pCPBQc3QBs5sh7b1FCuKPEwAJ5oRBcJvShbEpump" target="_blank" class="icon-link">
+            <span class="blue-text">soon</span>
+            <a href="https://pump.fun/" target="_blank" class="icon-link">
                 <img src="12.png" alt="Pump Fun">
             </a>
         </div>
